--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">Dating</a>
-        <ul class="navbar-nav me-auto mb-2 mb-md-0"  *ngIf="loggedIn">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0"  *ngIf="accountService.currentUser$ |async">
           <li class="nav-item">
             <a class="nav-link" href="#">Matches</a>
           </li>
@@ -10,20 +10,17 @@
           </li>
           <li class="nav-item">
             <a class="nav-link">Messages</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"(click)="logout()">Logout</a>
-          </li>
+          </li>          
         </ul>
 
-        <div class="dropdown" *ngIf="loggedIn" dropdown>
-          <a class="dropdown-toggle text-light" dropdownToggle >Welcome User</a>
-          <div class="dropdown-menu" *dropdownMenu>
+        <div class="dropdown" *ngIf="accountService.currentUser$ |async" dropdown>
+          <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle >Welcome User</a>
+          <div class="dropdown-menu mt-3" *dropdownMenu>
             <a class="dropdown-item">Edit Profile</a>           
             <a class="dropdown-item" (click)="logout()">Logout</a>
           </div>
         </div>
-        <form #loginForm="ngForm" *ngIf="!loggedIn" class="d-flex" (ngSubmit)="login()" autocomplete="off">
+        <form #loginForm="ngForm" *ngIf="!(accountService.currentUser$ |async)" class="d-flex" (ngSubmit)="login()" autocomplete="off">
           <input 
            name="username"
            [(ngModel)]="model.username"
