--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,5 +5,5 @@
   <li *ngFor="let user of users">{{user.id}}-{{user.userName}}
   </li>
 </ul>  -->
-<app-home></app-home>
+<router-outlet></router-outlet>
 </div>
